<resources>
    <string name="app_name">Lovely Bells</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Vendor Fragment Strings-->
    <string name="venue">Venue</string>
    <string name="photography">Photography</string>
    <string name="makeup">Makeup</string>
    <string name="catering">Catering</string>
    <string name="invitation">Invitation</string>

    <string name="blog">Blog</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_venuesactivity">Venuesactivity</string>

</resources>
