<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/fragment_background"
    tools:context="com.ravi_3882.lovelybells.CategoriesFragment">

    <HorizontalScrollView
        android:id="@+id/categories_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/venueButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@mipmap/venue_icon"
                    android:scaleType="fitCenter"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/venue"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#323232"
                    android:textSize="13dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/photoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@mipmap/photography_icon"
                    android:scaleType="fitCenter"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/photography"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#323232"
                    android:textSize="13dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/cateringButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@mipmap/catering_icon"
                    android:scaleType="fitCenter"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/catering"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#323232"
                    android:textSize="13dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/makeupButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@mipmap/makeup_icon"
                    android:scaleType="fitCenter"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/makeup"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#323232"
                    android:textSize="13dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/invitationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@mipmap/invitation_icon"
                    android:scaleType="fitCenter"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/invitation"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#323232"
                    android:textSize="13dp"/>
            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>
</RelativeLayout>
